# Rust-Copartner

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt  run_e2e_tests.sh  rust-copartner-client.py  rust-copartner-daemon.py
e2e_tests/: .gitignore  README.md  run_interactive.sh  run_prompt.sh
e2e_tests/interactive/scene1/: edited.diff
e2e_tests/interactive/scene1/edited/: main.rs
e2e_tests/prompt/scene1/: prompt.md
e2e_tests/prompt/scene1/expect/expect/: main.rs
e2e_tests/prompt/scene1/original/: main.rs
e2e_tests/scene1/: .gitignore  run.sh
python/: pyproject.toml  requirements.txt
python/prompts/: base_suggestion.md  final_diff.md  prompt_suggestion.md  system_messages.md
python/src/: __init__.py  client.py  daemon.py  diff_parser.py  llm_client.py  suggestion_generator.py  workflow.py
python/src/indexer/: __init__.py  build.py  embed.py  embeddings.py  io_utils.py  qdrant_utils.py  retrieval.py
python/tests/: conftest.py  test_diff_parser.py  test_indexer_build.py  test_indexer_integration.py  test_llm_client.py  test_retrieval.py  test_retrieval_cli.py  test_suggestion_generator.py  test_workflow.py
python/tests/mocks/: mock_llm_responses.py
rust/: Cargo.toml
rust/src/: complexity_analyzer.rs  indexer.rs  lib.rs  main.rs  parser.rs
rust/src/analyzer/: mod.rs  model.rs  scanner.rs  util.rs
rust/src/indexer/: mod.rs  parser.rs
rust/tests/: project_analyzer.rs
rust/tests/fixtures/: point.rs  vectors.json
rust/tests/reports/: complexity_report.json
rust/tests/samples/: advanced_features.rs  complex_example.rs
utils/: fix_diff.py
