[package]
name = "rust-copartner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-copartner"
path = "src/main.rs"

[lib]
name = "rust_copartner"
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }