[package]
name = "rust-copartner"
version = "0.1.0"
edition = "2021"

# All binaries in src/bin/ are automatically discovered by Cargo

[lib]
name = "rust_copartner"
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
walkdir = "2.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1.10"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.10"
